@startuml

title __ROOM's Class Diagram__\n

  namespace Room {
    abstract class Room.Room {
        # config : int[][][]
        # dimX : int
        # dimY : int
        # isLocked : boolean
        # objects : ArrayList<GameObject>
        {static} # sheet : MapSheet
        # toBeLocked : boolean
        # type : int
        - toRemove : Queue<GameObject>
        + add()
        + clear()
        + getBoundsOfTile()
        + getConfig()
        + getDimX()
        + getDimY()
        + getObjects()
        + getTilebyName()
        + getType()
        + hasEnemies()
        + isLocked()
        + isToBeLocked()
        + remove()
        + render()
        + setConfig()
        + setLocked()
        {static} + setSheet()
        + setToBeLocked()
        + tick()
    }
  }
  

  namespace Room {
    class Room.RoomInterior {
        + RoomInterior()
        + RoomInterior()
    }
  }
  

  namespace Room {
    class Room.RoomOutdoor {
        + RoomOutdoor()
        + getBoundsOfTile()
        + render()
    }
  }
  

  Room.RoomInterior -up-|> Room.Room
  Room.RoomOutdoor -up-|> Room.Room


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
